[project]
name = "aioxrocket"
version = "0.1.0"
description = "Async client for XRocket API"
authors = [
  { name="Твоё имя", email="твой@email.com" }
]
dependencies = [
  "aiohttp>=3.9.0",
  "pydantic>=2.0",
  "typing_extensions>=4.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
